chore(devops): added DOCKER_CLI_EXPERIMENTAL

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -16,7 +16,7 @@ on:
 env:
   BLOBBER_REGISTRY: ${{ secrets.BLOBBER_REGISTRY }}
   VALIDATOR_REGISTRY: ${{ secrets.VALIDATOR_REGISTRY }}
-  DOCKER_CLI_EXPERIMENTAL: true
+  DOCKER_CLI_EXPERIMENTAL: enabled
 
 jobs:
   blobber:
@@ -54,21 +54,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build base
-        run: |
-          export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
-          ./docker.local/bin/build.base.sh
-
       - name: Build blobber
         run: |
-          SHORT_SHA=$(echo ${{ env.SHA }} | head -c 8)
-        
           export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
-          export DOCKER_IMAGE_BLOBBER="-t ${BLOBBER_REGISTRY}:${TAG} -t ${BLOBBER_REGISTRY}:${TAG}-${SHORT_SHA}"
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
-
-          ./docker.local/bin/build.blobber.sh
+          export DOCKER_IMAGE_BLOBBER="-t ${BLOBBER_REGISTRY}:${TAG} -t ${BLOBBER_REGISTRY}:${TAG}-${SHORT_SHA}"
+          SHORT_SHA=$(echo ${{ env.SHA }} | head -c 8)
+              
+          ./docker.local/bin/build.base.sh && ./docker.local/bin/build.blobber.sh
 
   validator:
     runs-on: [self-hosted, build]
@@ -105,21 +98,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build base
-        run: |
-          export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
-          export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
-          ./docker.local/bin/build.base.sh
-
       - name: Build validator
         run: |
-          SHORT_SHA=$(echo ${{ env.SHA }} | head -c 8)
-        
           export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
-          export DOCKER_IMAGE_VALIDATOR="-t ${VALIDATOR_REGISTRY}:${TAG} -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
-    
-          ./docker.local/bin/build.validator.sh
+          export DOCKER_IMAGE_VALIDATOR="-t ${VALIDATOR_REGISTRY}:${TAG} -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
+          SHORT_SHA=$(echo ${{ env.SHA }} | head -c 8)
+
+          ./docker.local/bin/build.base.sh && ./docker.local/bin/build.validator.sh
 
 
   system-tests:
