fix(challenge): add time stopwatch for workers (#776)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,11 +30,13 @@ jobs:
         run: make local
 
       - name: Golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3
         with:
           version: latest
           args: --timeout=2m0s
-          skip-go-installation: true
+          skip-cache: true
+          skip-pkg-cache: true
+          skip-build-cache: true
 
 
   unit-tests:
