--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -67,6 +67,8 @@ min_confirmation: 50
 
 block_worker: http://198.18.0.98:9091
 
+challenge_completion_time: 3m
+
 handlers:
   rate_limit: 0 # 10 per second . it can't too small one if a large file is download with blocks
   file_rate_limit: 100 # 100 files per second
