--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -47,6 +47,18 @@ jobs:
       
 #       - name: Set up Docker Buildx
 #         uses: docker/setup-buildx-action@v2
+
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker context create builders
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
+          endpoint: builders
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -91,7 +103,19 @@ jobs:
       
 #       - name: Set up Docker Buildx
 #         uses: docker/setup-buildx-action@v2
-        
+
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker context create builders
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
+          endpoint: builders
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
