--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       
 #       - name: Set up Docker Buildx
 #         uses: docker/setup-buildx-action@v2
@@ -98,8 +98,8 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-#       - name: Set up QEMU
-#         uses: docker/setup-qemu-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
       
 #       - name: Set up Docker Buildx
 #         uses: docker/setup-buildx-action@v2
