--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -42,23 +42,23 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v2
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-#       - name: Set up Docker Context for Buildx
-#         id: buildx-context
-#         run: |
-#           docker context create builders
-
 #       - name: Set up Docker Buildx
-#         id: buildx
 #         uses: docker/setup-buildx-action@v2
-#         with:
-#           version: latest
-#           endpoint: builders
+
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker buildx create --name multiarch-builder --driver docker-container --use tls-environment
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
+          endpoint: multiarch-builder
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -98,23 +98,23 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v2
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-#       - name: Set up Docker Context for Buildx
-#         id: buildx-context
-#         run: |
-#           docker context create builders
-
 #       - name: Set up Docker Buildx
-#         id: buildx
 #         uses: docker/setup-buildx-action@v2
-#         with:
-#           version: latest
-#           endpoint: builders
+
+      - name: Set up Docker Context for Buildx
+        id: buildx-context
+        run: |
+          docker buildx create --name multiarch-builder --driver docker-container --use tls-environment
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          version: latest
+          endpoint: multiarch-builder
           
       - name: Login to Docker Hub
         uses: docker/login-action@v1
