--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -48,10 +48,10 @@ jobs:
 #       - name: Set up Docker Buildx
 #         uses: docker/setup-buildx-action@v2
 
-      - name: Set up Docker Context for Buildx
-        id: buildx-context
-        run: |
-          docker buildx create --name multiarch-builder --driver docker-container --use tls-environment
+#       - name: Set up Docker Context for Buildx
+#         id: buildx-context
+#         run: |
+#           docker buildx create --name multiarch-builder --driver docker-container --use tls-environment
 
       - name: Set up Docker Buildx
         id: buildx
@@ -104,10 +104,10 @@ jobs:
 #       - name: Set up Docker Buildx
 #         uses: docker/setup-buildx-action@v2
 
-      - name: Set up Docker Context for Buildx
-        id: buildx-context
-        run: |
-          docker buildx create --name multiarch-builder --driver docker-container --use tls-environment
+#       - name: Set up Docker Context for Buildx
+#         id: buildx-context
+#         run: |
+#           docker buildx create --name multiarch-builder --driver docker-container --use tls-environment
 
       - name: Set up Docker Buildx
         id: buildx
