updated docker & docker-compose deployment

--- a/docker.local/p0docker-compose.yml
+++ b/docker.local/p0docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./blobber${BLOBBER}/data/postgresql:/var/lib/postgresql/data
     networks:
       default:
+
   postgres-post:
     image: postgres:14
     environment:
@@ -23,8 +24,9 @@ services:
     command: bash /blobber/bin/postgres-entrypoint.sh
     links:
       - postgres:postgres
+
   validator:
-    image: 0chaindev/validator:latest
+    image: validator
     environment:
       - DOCKER= true
     depends_on:
@@ -38,14 +40,14 @@ services:
       - ./keys_config:/validator/keysconfig
     ports:
       - "506${BLOBBER}:506${BLOBBER}"
-    command: ./bin/validator --port 506${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --log_dir /validator/log
+    command: ./bin/validator --port 506${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --log_dir /validator/log --hosturl https://<domain>/validator${BLOBBER}/
     networks:
       default:
       testnet0:
-        ipv4_address: 198.18.0.6${BLOBBER}
+        ipv4_address: 198.18.0.1${BLOBBER}
 
   blobber:
-    image: 0chaindev/blobber:latest
+    image: blobber
     environment:
       - DOCKER= true
     depends_on:
@@ -61,12 +63,12 @@ services:
       - ./blobber${BLOBBER}/data/tmp:/tmp
     ports:
       - "505${BLOBBER}:505${BLOBBER}"
-      - "703${BLOBBER}:703${BLOBBER}"
-    command: ./bin/blobber --port 505${BLOBBER} --grpc_port 703${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data --minio_file keysconfig/minio_config.txt
+      # - "703${BLOBBER}:703${BLOBBER}"
+    command: ./bin/blobber --port 505${BLOBBER} --hostname localhost --deployment_mode 0 --keys_file keysconfig/b0bnode${BLOBBER}_keys.txt --files_dir /blobber/files --log_dir /blobber/log --db_dir /blobber/data --minio_file keysconfig/minio_config.txt --hosturl https://<domain>/blobber${BLOBBER}/
     networks:
       default:
       testnet0:
-        ipv4_address: 198.18.0.9${BLOBBER}
+        ipv4_address: 198.18.0.2${BLOBBER}
 
 networks:
   default:
