--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
-# The following users own all code in the 0chain repo
+# The following users own all code in the blobber repo
 # Peter      Yury     Saswata
 * @peterlimg @dabasov @guruhubb
