--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   blobber:
-    runs-on: [self-hosted, docker-builds]
+    runs-on: [self-hosted, arc-runner]
     steps:
       - name: Set docker image tag 
         run: |
@@ -42,11 +42,11 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v2
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -64,7 +64,7 @@ jobs:
           ./docker.local/bin/build.base.sh && ./docker.local/bin/build.blobber.sh
 
   validator:
-    runs-on: [self-hosted, docker-builds]
+    runs-on: [self-hosted, arc-runner]
     steps:
       - name: Set docker image tag 
         run: |
