--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -47,7 +47,15 @@ jobs:
       
       # - name: Set up Docker Buildx
       #   uses: docker/setup-buildx-action@v2
-        
+
+      - name: Set up Docker buildx
+        run: |
+        cat <<EOF >> ~/.docker/config.json
+        {
+          "experimental": "enabled"
+        }
+        EOF
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
