fix enabling docker buildx

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -53,7 +53,7 @@ jobs:
           cd $HOME
           mkdir .docker 
           cd .docker
-          cat <<EOF >>./.docker/config.json
+          cat <<EOF >>./config.json
           {
             "experimental": "enabled"
           }
