--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -39,6 +39,20 @@ jobs:
         with:
           go-version: '1.18' # The Go version to download (if necessary) and use.
 
+    - name: Docker Setup.
+      run: |
+        sudo apt install apt-transport-https ca-certificates curl software-properties-common -y
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+        sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
+        apt-cache policy docker-ce
+        sudo apt install docker-ce -y
+
+    - name: Docker Compose Setup.
+      run: |
+        sudo curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+      
       - name: Clone blobber
         uses: actions/checkout@v1
 
@@ -58,6 +72,8 @@ jobs:
             "experimental": "enabled"
           }
           EOF
+          ls -lha
+          pwd
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
