--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -74,6 +74,7 @@ jobs:
           EOF
           ls -lha
           pwd
+          docker buildx create --name mybuilder --use
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
