--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # The following users own all code in the blobber repo
-# Peter      Yury     Saswata
-* @peterlimg @dabasov @guruhubb
+# Peter      Yury     Saswata   Dayi
+* @peterlimg @dabasov @guruhubb @cnlangzi
