--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -90,7 +90,11 @@ jobs:
         uses: docker/setup-qemu-action@v2
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts: |
+            image=moby/buildkit:master
+            network=host
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
