--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -46,7 +46,10 @@ jobs:
         uses: docker/setup-qemu-action@v2
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        run: |
+          docker buildx | true
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker buildx | true
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -83,24 +86,20 @@ jobs:
         with:
           go-version: '1.18' # The Go version to download (if necessary) and use.
 
+      - name: Clone blobber
+        uses: actions/checkout@v1
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          driver-opts: |
-            image=moby/buildkit:master
-            network=host
-
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      
-      - name: Clone blobber
-        uses: actions/checkout@v1
 
       - name: Build validator
         run: |
