testing fix for buildx issue on arc runners.

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -47,6 +47,7 @@ jobs:
       
       - name: Set up Docker Buildx
         run: |
+          sudo apt-get install -y docker-ce
           docker buildx | true
           export DOCKER_CLI_EXPERIMENTAL=enabled
           docker buildx | true
