--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -47,10 +47,8 @@ jobs:
       
       - name: Set up Docker Buildx
         run: |
-          sudo apt-get install -y docker-ce
-          docker buildx | true
-          export DOCKER_CLI_EXPERIMENTAL=enabled
-          docker buildx | true
+          curl -fsSL https://get.docker.com -o get-docker.sh
+          sudo ./get-docker.sh
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
