testing fix for buildx issue on arc runners.

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -47,9 +47,17 @@ jobs:
       
       - name: Set up Docker Buildx
         run: |
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sudo ./get-docker.sh
-        
+          sudo apt-get update -y
+          sudo apt-get install ca-certificates curl gnupg lsb-release
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update -y
+          sudo apt-get install docker-ce docker-ce-cli containerd.io
+          docker buildx || true
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker buildx || true
+
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
