--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -48,11 +48,11 @@ jobs:
       - name: Set up Docker Buildx
         run: |
           sudo apt-get update -y
-          sudo apt-get install ca-certificates curl gnupg lsb-release
+          sudo apt-get install ca-certificates curl gnupg lsb-release -y
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
           sudo apt-get update -y
-          sudo apt-get install docker-ce docker-ce-cli containerd.io
+          sudo apt-get install docker-ce docker-ce-cli containerd.io -y
           docker buildx || true
           export DOCKER_CLI_EXPERIMENTAL=enabled
           docker buildx || true
