--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -56,6 +56,10 @@ jobs:
           docker buildx || true
           export DOCKER_CLI_EXPERIMENTAL=enabled
           docker buildx || true
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          docker buildx rm builder
+          docker buildx create --name builder --driver docker-container --use
+          docker buildx inspect --bootstrap
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
