--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -41,9 +41,6 @@ jobs:
 
       - name: Clone blobber
         uses: actions/checkout@v1
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
       
       - name: Set up Docker Buildx
         run: |
@@ -61,6 +58,11 @@ jobs:
           docker buildx create --name builder --driver docker-container --use
           docker buildx inspect --bootstrap
 
+      - name: Set up QEMU
+        run: |
+          sudo apt-get install -y qemu-user-static
+          sudo apt-get install -y binfmt-support
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
