--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -58,10 +58,15 @@ jobs:
           # docker buildx create --name builder --driver docker-container --use
           # docker buildx inspect --bootstrap
 
+      # - name: Set up QEMU
+      #   run: |
+      #     sudo apt-get install -y qemu-user-static
+      #     sudo apt-get install -y binfmt-support    - name: Set up QEMU
       - name: Set up QEMU
-        run: |
-          sudo apt-get install -y qemu-user-static
-          sudo apt-get install -y binfmt-support
+        uses: docker/setup-qemu-action@v1
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
