--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -53,6 +53,7 @@ jobs:
           docker buildx || true
           export DOCKER_CLI_EXPERIMENTAL=enabled
           docker buildx || true
+          docker run --privileged --rm tonistiigi/binfmt --install all
           # docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
           # docker buildx rm builder
           # docker buildx create --name builder --driver docker-container --use
@@ -62,11 +63,11 @@ jobs:
       #   run: |
       #     sudo apt-get install -y qemu-user-static
       #     sudo apt-get install -y binfmt-support    - name: Set up QEMU
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          image: tonistiigi/binfmt:latest
-          platforms: all
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
+      #   with:
+      #     image: tonistiigi/binfmt:latest
+      #     platforms: all
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
