--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -59,7 +59,7 @@ jobs:
           # docker buildx create --name builder --driver docker-container --use
           # docker buildx inspect --bootstrap
           docker context create blobber_buildx
-          docker buildx create blobber_buildx
+          # docker buildx create blobber_buildx
 
       # - name: Set up QEMU
       #   run: |
@@ -83,7 +83,7 @@ jobs:
           export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
           export DOCKER_IMAGE_BLOBBER="-t ${BLOBBER_REGISTRY}:${TAG} -t ${BLOBBER_REGISTRY}:${TAG}-${SHORT_SHA}"
-              
+          docker buildx create --use blobber_buildx
           ./docker.local/bin/build.base.sh && ./docker.local/bin/build.blobber.sh
 
   validator:
