--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -54,22 +54,7 @@ jobs:
           export DOCKER_CLI_EXPERIMENTAL=enabled
           docker buildx || true
           docker run --privileged --rm tonistiigi/binfmt --install all
-          # docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-          # docker buildx rm builder
-          # docker buildx create --name builder --driver docker-container --use
-          # docker buildx inspect --bootstrap
           docker context create blobber_buildx
-          # docker buildx create blobber_buildx
-
-      # - name: Set up QEMU
-      #   run: |
-      #     sudo apt-get install -y qemu-user-static
-      #     sudo apt-get install -y binfmt-support    - name: Set up QEMU
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v1
-      #   with:
-      #     image: tonistiigi/binfmt:latest
-      #     platforms: all
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -109,11 +94,19 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install ca-certificates curl gnupg lsb-release -y
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update -y
+          sudo apt-get install docker-ce docker-ce-cli containerd.io -y
+          docker buildx || true
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker buildx || true
+          docker run --privileged --rm tonistiigi/binfmt --install all
+          docker context create blobber_buildx
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -127,7 +120,7 @@ jobs:
           export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
           export DOCKER_IMAGE_VALIDATOR="-t ${VALIDATOR_REGISTRY}:${TAG} -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
-          
+          docker buildx create --use blobber_buildx
           ./docker.local/bin/build.base.sh && ./docker.local/bin/build.validator.sh
 
 
