fix(devops): fixed setup-docker-buildx issue on k8s

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -49,6 +49,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           driver: kubernetes
+          use: false
           buildkitd-flags: --debug
         
       - name: Login to Docker Hub
