--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -48,9 +48,8 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          driver: kubernetes
-          use: false
-          buildkitd-flags: --debug
+          driver-opts: image=moby/buildkit:master
+
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
