--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -49,7 +49,9 @@ jobs:
         uses: docker/setup-buildx-action@v2
         with:
           driver: kubernetes
-          driver-opts: image=moby/buildkit:master
+          driver-opts: |
+            image=moby/buildkit:master
+            rootless=true
 
         
       - name: Login to Docker Hub
