--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -122,6 +122,7 @@ jobs:
           export DOCKER_IMAGE_VALIDATOR="-t ${VALIDATOR_REGISTRY}:${TAG} -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
           # docker buildx create --use blobber_buildx
           export DOCKER_TLS_VERIFY=""
+          export DOCKER_TLS_CERTDIR=""
           docker buildx create --name blobber_buildx \
             --driver docker-container \
             --driver-opt network=host \
