--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   blobber:
-    runs-on: [self-hosted, docker-builds]
+    runs-on: [self-hosted, arc-runner]
     steps:
       - name: Set docker image tag 
         run: |
@@ -41,13 +41,19 @@ jobs:
 
       - name: Clone blobber
         uses: actions/checkout@v1
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install ca-certificates curl gnupg lsb-release -y
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update -y
+          sudo apt-get install docker-ce docker-ce-cli containerd.io -y
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker run --privileged --rm tonistiigi/binfmt --install all
+          docker context create blobber_buildx
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -60,11 +66,11 @@ jobs:
           export DOCKER_IMAGE_BASE="${BLOBBER_REGISTRY}:base"
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
           export DOCKER_IMAGE_BLOBBER="-t ${BLOBBER_REGISTRY}:${TAG} -t ${BLOBBER_REGISTRY}:${TAG}-${SHORT_SHA}"
-              
+          docker buildx create --driver-opt network=host --use --buildkitd-flags '--allow-insecure-entitlement security.insecure' --use blobber_buildx
           ./docker.local/bin/build.base.sh && ./docker.local/bin/build.blobber.sh
 
   validator:
-    runs-on: [self-hosted, docker-builds]
+    runs-on: [self-hosted, arc-runner]
     steps:
       - name: Set docker image tag 
         run: |
@@ -86,11 +92,17 @@ jobs:
       - name: Clone blobber
         uses: actions/checkout@v1
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install ca-certificates curl gnupg lsb-release -y
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update -y
+          sudo apt-get install docker-ce docker-ce-cli containerd.io -y
+          export DOCKER_CLI_EXPERIMENTAL=enabled
+          docker run --privileged --rm tonistiigi/binfmt --install all
+          docker context create blobber_buildx
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -104,7 +116,7 @@ jobs:
           export DOCKER_IMAGE_BASE="${VALIDATOR_REGISTRY}:base"
           export DOCKER_BUILD="buildx build --platform linux/amd64,linux/arm64 --push"
           export DOCKER_IMAGE_VALIDATOR="-t ${VALIDATOR_REGISTRY}:${TAG} -t ${VALIDATOR_REGISTRY}:${TAG}-${SHORT_SHA}"
-          
+          docker buildx create --driver-opt network=host --use --buildkitd-flags '--allow-insecure-entitlement security.insecure' --use blobber_buildx
           ./docker.local/bin/build.base.sh && ./docker.local/bin/build.validator.sh
 
 
