--- a/config/0chain_blobber.yaml
+++ b/config/0chain_blobber.yaml
@@ -112,9 +112,8 @@ readmarker_redeem:
   frequency: 10
   num_workers: 5
 challenge_response:
+  # frequency is the number of seconds interval to request blockchain for open challenges
   frequency: 10
-  num_workers: 5
-  max_retries: 20
 
 healthcheck:
   frequency: 60s # send healthcheck to miners every 60 seconds
