chore(docker): upgraded go to 1.19 and alpine to 3.17

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -38,9 +38,9 @@ jobs:
 
     - name: Setup go 1.18
       if: success()
-      uses: actions/setup-go@v2
+      uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: ^1.19
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
