--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -12,10 +12,10 @@ jobs:
   benchmark:
     runs-on: [self-hosted, conductor-test]
     steps:
-      - name: Setup go 1.18
-        uses: actions/setup-go@v2
+      - name: Setup go 
+        uses: actions/setup-go@v3
         with:
-          go-version: '1.18' # The Go version to download (if necessary) and use.
+          go-version: ^1.19 # The Go version to download (if necessary) and use.
 
       - name: Clone blobber
         uses: actions/checkout@v2
