--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -20,7 +20,7 @@ env:
 
 jobs:
   blobber:
-    runs-on: [self-hosted, arc-runner]
+    runs-on: [self-hosted, arc-runner1]
     steps:
       - name: Set docker image tag 
         run: |
@@ -71,7 +71,7 @@ jobs:
           ./docker.local/bin/build.base.sh && ./docker.local/bin/build.blobber.sh
 
   validator:
-    runs-on: [self-hosted, arc-runner]
+    runs-on: [self-hosted, arc-runner1]
     steps:
       - name: Set docker image tag 
         run: |
