update blobber/validator build

--- a/.github/workflows/build-&-publish-docker-image.yml
+++ b/.github/workflows/build-&-publish-docker-image.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Set up Docker Buildx
         run: |
           sudo apt-get update -y
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev
           sudo apt-get install ca-certificates curl gnupg lsb-release -y
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
@@ -96,6 +97,7 @@ jobs:
       - name: Set up Docker Buildx
         run: |
           sudo apt-get update -y
+          sudo apt-get -y install build-essential nghttp2 libnghttp2-dev libssl-dev
           sudo apt-get install ca-certificates curl gnupg lsb-release -y
           curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
